--- a/login-page/src/component/Login.css
+++ b/login-page/src/component/Login.css
@@ -18,13 +18,15 @@
 }
 .button1{
     background-color: #011df7;
+  color: rgb(240, 240, 240);
+  display: block;
+  width: 100%;
   border: none;
-  color: rgb(230, 230, 230);
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  background-color: #2200fd;
+  padding: 14px 28px;
   font-size: 16px;
+  cursor: pointer;
+  text-align: center;
 }
 .lock{
     box-sizing: border-box;
